# PyO3_RayTracing

./: README.md  backend_wrapper.py  benchmark.py
py_backend/py_math_lib/: constants.py  intersection.py  line.py  sphere.py  vector3.py
py_backend/py_ray_tracing/: camera.py  color.py
rs_backend/: Cargo.toml  pyproject.toml
rs_backend/src/: lib.rs  py_bindings.rs
rs_backend/src/rs_math_lib/: constants.rs  intersection.rs  line.rs  mod.rs  sphere.rs  vector3.rs
rs_backend/src/rs_ray_tracing/: camera.rs  color.rs
