[package]
name = "rs_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"

[profile.release]
debug = true       # for the profiler.
lto = true
codegen-units = 1
